# wpdrive-client

./: .gitignore  README.md  RELEASE_CHECKLIST.md  WPDrive-Install.spec  pyproject.toml
installer/: build-exe.ps1  install-latest.ps1  install.ps1  install.sh  win_install.py
scripts/: bump-version.ps1
wpdrive/: api.py  cli.py  conflicts.py  scan.py  state.py  sync_engine.py  util.py  watcher.py
