[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpdrive"
version = "1.0.0"
description = "WPDrive Sync client for WordPress (chunked uploads, multi-device sync)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
daemon = ["watchdog>=4.0.0"]

[project.scripts]
wpdrive = "wpdrive.cli:main"
